# news-debias

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: basic_demo.py
src/news_debias/: __init__.py  analysis.py  models.py  preprocessing.py
src/news_debias/extractors/: __init__.py  numerical_expressions.py  vague_attributions.py
tests/: test_analysis.py  test_models.py  test_numerical_expressions.py  test_package.py  test_preprocessing.py  test_vague_attributions.py
tests/fixtures/: sample_article.txt
